{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 1584,
  "lineage": "3ccead4a-95ff-c8dd-5def-1d5bbea103b3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tokyo-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c7f576b348007bd",
            "arn": "arn:aws:ec2:ap-northeast-1:724772059772:elastic-ip/eipalloc-05c7f576b348007bd",
            "association_id": "eipassoc-0562b34eccab69937",
            "domain": "vpc",
            "id": "eipalloc-05c7f576b348007bd",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0cf02d580a3ad42fb",
            "private_dns": "ip-10-40-11-58.ap-northeast-1.compute.internal",
            "private_ip": "10.40.11.58",
            "public_dns": "ec2-57-182-79-234.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "57.182.79.234",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tokyo-eip"
            },
            "tags_all": {
              "Name": "tokyo-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "australia-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:724772059772:internet-gateway/igw-0f2d21ffb4092c46c",
            "id": "igw-0f2d21ffb4092c46c",
            "owner_id": "724772059772",
            "tags": {
              "Name": "australia"
            },
            "tags_all": {
              "Name": "australia"
            },
            "vpc_id": "vpc-001dc221cd494c587"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "california-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:724772059772:internet-gateway/igw-0817b35ae931f0466",
            "id": "igw-0817b35ae931f0466",
            "owner_id": "724772059772",
            "tags": {
              "Name": "california"
            },
            "tags_all": {
              "Name": "california"
            },
            "vpc_id": "vpc-0a09bf91a7b90d511"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hong-kong-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:724772059772:internet-gateway/igw-02e1abd8bcec1b4a6",
            "id": "igw-02e1abd8bcec1b4a6",
            "owner_id": "724772059772",
            "tags": {
              "Name": "hong-kong"
            },
            "tags_all": {
              "Name": "hong-kong"
            },
            "vpc_id": "vpc-0502bf27b4c80f029"
          },
          "dependencies": [
            "aws_vpc.hong-kong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "london-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:724772059772:internet-gateway/igw-0a3a0906a29924dc8",
            "id": "igw-0a3a0906a29924dc8",
            "owner_id": "724772059772",
            "tags": {
              "Name": "london"
            },
            "tags_all": {
              "Name": "london"
            },
            "vpc_id": "vpc-093d18d521048ace7"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-york-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772059772:internet-gateway/igw-04469e4b29d3661fd",
            "id": "igw-04469e4b29d3661fd",
            "owner_id": "724772059772",
            "tags": {
              "Name": "new-york"
            },
            "tags_all": {
              "Name": "new-york"
            },
            "vpc_id": "vpc-059695cf440897711"
          },
          "dependencies": [
            "aws_vpc.new-york-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sao-paulo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:724772059772:internet-gateway/igw-022465e08d17d5c25",
            "id": "igw-022465e08d17d5c25",
            "owner_id": "724772059772",
            "tags": {
              "Name": "sao-paulo"
            },
            "tags_all": {
              "Name": "sao-paulo"
            },
            "vpc_id": "vpc-0c212e587cef2e6c3"
          },
          "dependencies": [
            "aws_vpc.sao-paulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tokyo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:724772059772:internet-gateway/igw-06c4d9a67e2a90262",
            "id": "igw-06c4d9a67e2a90262",
            "owner_id": "724772059772",
            "tags": {
              "Name": "tokyo"
            },
            "tags_all": {
              "Name": "tokyo"
            },
            "vpc_id": "vpc-02a56339e88e0859e"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "australia-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:724772059772:targetgroup/australia-target-group/4c8cef6c9ae3c39e",
            "arn_suffix": "targetgroup/australia-target-group/4c8cef6c9ae3c39e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:724772059772:targetgroup/australia-target-group/4c8cef6c9ae3c39e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "australia-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "tags_all": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-001dc221cd494c587"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "california-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:724772059772:targetgroup/california-target-group/8e92a36cd00dc787",
            "arn_suffix": "targetgroup/california-target-group/8e92a36cd00dc787",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:724772059772:targetgroup/california-target-group/8e92a36cd00dc787",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "california-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "tags_all": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a09bf91a7b90d511"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "hong-kong-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:724772059772:targetgroup/hong-kong-target-group/9c00ceacf8c68ec7",
            "arn_suffix": "targetgroup/hong-kong-target-group/9c00ceacf8c68ec7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:724772059772:targetgroup/hong-kong-target-group/9c00ceacf8c68ec7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "hong-kong-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "tags_all": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0502bf27b4c80f029"
          },
          "dependencies": [
            "aws_vpc.hong-kong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "london-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:724772059772:targetgroup/london-target-group/d7cfb8a67cab6839",
            "arn_suffix": "targetgroup/london-target-group/d7cfb8a67cab6839",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:724772059772:targetgroup/london-target-group/d7cfb8a67cab6839",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "london-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "tags_all": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-093d18d521048ace7"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "new-york-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:724772059772:targetgroup/new-york-target-group/a5f0e82c67d970a7",
            "arn_suffix": "targetgroup/new-york-target-group/a5f0e82c67d970a7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:724772059772:targetgroup/new-york-target-group/a5f0e82c67d970a7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "new-york-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "tags_all": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-059695cf440897711"
          },
          "dependencies": [
            "aws_vpc.new-york-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sao-paulo-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:724772059772:targetgroup/sao-paulo-target-group/5311bb69f1bc89de",
            "arn_suffix": "targetgroup/sao-paulo-target-group/5311bb69f1bc89de",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:724772059772:targetgroup/sao-paulo-target-group/5311bb69f1bc89de",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sao-paulo-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "tags_all": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c212e587cef2e6c3"
          },
          "dependencies": [
            "aws_vpc.sao-paulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tokyo-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:724772059772:targetgroup/tokyo-target-group/54ca67ad49a4ee83",
            "arn_suffix": "targetgroup/tokyo-target-group/54ca67ad49a4ee83",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:724772059772:targetgroup/tokyo-target-group/54ca67ad49a4ee83",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tokyo-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "tags_all": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02a56339e88e0859e"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tokyo-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c7f576b348007bd",
            "association_id": "eipassoc-0562b34eccab69937",
            "connectivity_type": "public",
            "id": "nat-0e014535d748439b1",
            "network_interface_id": "eni-0cf02d580a3ad42fb",
            "private_ip": "10.40.11.58",
            "public_ip": "57.182.79.234",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02e9a585c76100a59",
            "tags": {
              "Name": "tokyo-nat"
            },
            "tags_all": {
              "Name": "tokyo-nat"
            }
          },
          "dependencies": [
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_subnet._7",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:724772059772:route-table/rtb-01dd77732a09e2aad",
            "id": "rtb-01dd77732a09e2aad",
            "owner_id": "724772059772",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f2d21ffb4092c46c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-001dc221cd494c587"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.australia-igw",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:724772059772:route-table/rtb-0b7963c5a77173839",
            "id": "rtb-0b7963c5a77173839",
            "owner_id": "724772059772",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0817b35ae931f0466",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a09bf91a7b90d511"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.california-igw",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:724772059772:route-table/rtb-01161027ca0e11d0d",
            "id": "rtb-01161027ca0e11d0d",
            "owner_id": "724772059772",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e1abd8bcec1b4a6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0502bf27b4c80f029"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hong-kong-igw",
            "aws_vpc.hong-kong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:724772059772:route-table/rtb-0a818b1bb1698f2f9",
            "id": "rtb-0a818b1bb1698f2f9",
            "owner_id": "724772059772",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a3a0906a29924dc8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-093d18d521048ace7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.london-igw",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772059772:route-table/rtb-00b658f52c475229f",
            "id": "rtb-00b658f52c475229f",
            "owner_id": "724772059772",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04469e4b29d3661fd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-059695cf440897711"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new-york-igw",
            "aws_vpc.new-york-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "_6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:724772059772:route-table/rtb-08d0ddfd94a051a9f",
            "id": "rtb-08d0ddfd94a051a9f",
            "owner_id": "724772059772",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-022465e08d17d5c25",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c212e587cef2e6c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sao-paulo-igw",
            "aws_vpc.sao-paulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "_7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": "private",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:724772059772:route-table/rtb-02bcfd8c8ca979135",
            "id": "rtb-02bcfd8c8ca979135",
            "owner_id": "724772059772",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e014535d748439b1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a56339e88e0859e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_nat_gateway.tokyo-nat",
            "aws_subnet._7",
            "aws_vpc.tokyo-vpc"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:724772059772:route-table/rtb-009ad986609208c49",
            "id": "rtb-009ad986609208c49",
            "owner_id": "724772059772",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06c4d9a67e2a90262",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a56339e88e0859e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_nat_gateway.tokyo-nat",
            "aws_subnet._7",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "_1-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "index_key": "california-b-public",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4749a2743310bfe",
            "route_table_id": "rtb-0b7963c5a77173839",
            "subnet_id": "subnet-04b7290a932e6baab"
          },
          "dependencies": [
            "aws_internet_gateway.california-igw",
            "aws_route_table._2",
            "aws_subnet._2",
            "aws_vpc.california-vpc"
          ]
        },
        {
          "index_key": "california-c-public",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bda768601ea843e",
            "route_table_id": "rtb-0b7963c5a77173839",
            "subnet_id": "subnet-01c9c4037dcd044e3"
          },
          "dependencies": [
            "aws_internet_gateway.california-igw",
            "aws_route_table._2",
            "aws_subnet._2",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "_2-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "index_key": "california-b-public",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4749a2743310bfe",
            "route_table_id": "rtb-0b7963c5a77173839",
            "subnet_id": "subnet-04b7290a932e6baab"
          },
          "dependencies": [
            "aws_internet_gateway.california-igw",
            "aws_route_table._2",
            "aws_subnet._2",
            "aws_vpc.california-vpc"
          ]
        },
        {
          "index_key": "california-c-public",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bda768601ea843e",
            "route_table_id": "rtb-0b7963c5a77173839",
            "subnet_id": "subnet-01c9c4037dcd044e3"
          },
          "dependencies": [
            "aws_internet_gateway.california-igw",
            "aws_route_table._2",
            "aws_subnet._2",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "_3-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "index_key": "hong-kong-a-public",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adbc2dcf7219876c",
            "route_table_id": "rtb-01161027ca0e11d0d",
            "subnet_id": "subnet-0f82a4f34a18176b7"
          },
          "dependencies": [
            "aws_internet_gateway.hong-kong-igw",
            "aws_route_table._3",
            "aws_subnet._3",
            "aws_vpc.hong-kong-vpc"
          ]
        },
        {
          "index_key": "hong-kong-b-public",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae4bcf882016e29d",
            "route_table_id": "rtb-01161027ca0e11d0d",
            "subnet_id": "subnet-03cc128dd5884c289"
          },
          "dependencies": [
            "aws_internet_gateway.hong-kong-igw",
            "aws_route_table._3",
            "aws_subnet._3",
            "aws_vpc.hong-kong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "_4-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "index_key": "london-a-public",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06eca32da77c77352",
            "route_table_id": "rtb-0a818b1bb1698f2f9",
            "subnet_id": "subnet-0daa1f56ebe590ce7"
          },
          "dependencies": [
            "aws_internet_gateway.london-igw",
            "aws_route_table._4",
            "aws_subnet._4",
            "aws_vpc.london-vpc"
          ]
        },
        {
          "index_key": "london-b-public",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e7f4bbdfa9c6fa6",
            "route_table_id": "rtb-0a818b1bb1698f2f9",
            "subnet_id": "subnet-0761fd9f51714bbaa"
          },
          "dependencies": [
            "aws_internet_gateway.london-igw",
            "aws_route_table._4",
            "aws_subnet._4",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "_5-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "index_key": "new-york-a-public",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0051548c31d7a2b88",
            "route_table_id": "rtb-00b658f52c475229f",
            "subnet_id": "subnet-0bd351f65927a5a03"
          },
          "dependencies": [
            "aws_internet_gateway.new-york-igw",
            "aws_route_table._5",
            "aws_subnet._5",
            "aws_vpc.new-york-vpc"
          ]
        },
        {
          "index_key": "new-york-b-public",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce39f7d94a933995",
            "route_table_id": "rtb-00b658f52c475229f",
            "subnet_id": "subnet-042bed56b2051c2c0"
          },
          "dependencies": [
            "aws_internet_gateway.new-york-igw",
            "aws_route_table._5",
            "aws_subnet._5",
            "aws_vpc.new-york-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "_6-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "index_key": "sao-paulo-a-public",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7a155ee9ece3133",
            "route_table_id": "rtb-08d0ddfd94a051a9f",
            "subnet_id": "subnet-029146b5d4fdf7d44"
          },
          "dependencies": [
            "aws_internet_gateway.sao-paulo-igw",
            "aws_route_table._6",
            "aws_subnet._6",
            "aws_vpc.sao-paulo-vpc"
          ]
        },
        {
          "index_key": "sao-paulo-c-public",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d446910126dcdf5",
            "route_table_id": "rtb-08d0ddfd94a051a9f",
            "subnet_id": "subnet-0145fea35f5d12269"
          },
          "dependencies": [
            "aws_internet_gateway.sao-paulo-igw",
            "aws_route_table._6",
            "aws_subnet._6",
            "aws_vpc.sao-paulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "_7-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": "tokyo-a-private",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb9aed64c9e4394e",
            "route_table_id": "rtb-02bcfd8c8ca979135",
            "subnet_id": "subnet-02e9a585c76100a59"
          },
          "dependencies": [
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_nat_gateway.tokyo-nat",
            "aws_route_table._7",
            "aws_subnet._7",
            "aws_vpc.tokyo-vpc"
          ]
        },
        {
          "index_key": "tokyo-a-public",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010d9e8270c56f50b",
            "route_table_id": "rtb-009ad986609208c49",
            "subnet_id": "subnet-025822a7780837d53"
          },
          "dependencies": [
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_nat_gateway.tokyo-nat",
            "aws_route_table._7",
            "aws_subnet._7",
            "aws_vpc.tokyo-vpc"
          ]
        },
        {
          "index_key": "tokyo-d-public",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c2895554c5d1824",
            "route_table_id": "rtb-009ad986609208c49",
            "subnet_id": "subnet-096e3a8f2f36821c8"
          },
          "dependencies": [
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_nat_gateway.tokyo-nat",
            "aws_route_table._7",
            "aws_subnet._7",
            "aws_vpc.tokyo-vpc"
          ]
        },
        {
          "index_key": "tokyotest-c-public",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b87b933f293cb08",
            "route_table_id": "rtb-009ad986609208c49",
            "subnet_id": "subnet-00a7713b52cd58ed9"
          },
          "dependencies": [
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_nat_gateway.tokyo-nat",
            "aws_route_table._7",
            "aws_subnet._7",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "index_key": "australia-sg-lb",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:724772059772:security-group/sg-047f83bf61a33bd98",
            "description": "Allow inbound traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047f83bf61a33bd98",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "australia-sg-lb",
            "name_prefix": "",
            "owner_id": "724772059772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "australia-sg-lb"
            },
            "tags_all": {
              "Name": "australia-sg-lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-001dc221cd494c587"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.australia-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "australia-sg-server",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:724772059772:security-group/sg-05a0eea9111a69b97",
            "description": "Allow inbound traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a0eea9111a69b97",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "australia-sg-server",
            "name_prefix": "",
            "owner_id": "724772059772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "australia-sg-server"
            },
            "tags_all": {
              "Name": "australia-sg-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-001dc221cd494c587"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.australia-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "index_key": "california-sg-lb",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:724772059772:security-group/sg-0fbacb80233e7a104",
            "description": "Allow inbound traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fbacb80233e7a104",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "california-sg-lb",
            "name_prefix": "",
            "owner_id": "724772059772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "california-sg-lb"
            },
            "tags_all": {
              "Name": "california-sg-lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a09bf91a7b90d511"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.california-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "california-sg-server",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:724772059772:security-group/sg-0306b681b4c71fb22",
            "description": "Allow inbound traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0306b681b4c71fb22",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "california-sg-server",
            "name_prefix": "",
            "owner_id": "724772059772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "california-sg-server"
            },
            "tags_all": {
              "Name": "california-sg-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a09bf91a7b90d511"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.california-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "index_key": "hong-kong-sg-lb",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:724772059772:security-group/sg-024652e9b1b0c8a27",
            "description": "Allow inbound traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024652e9b1b0c8a27",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hong-kong-sg-lb",
            "name_prefix": "",
            "owner_id": "724772059772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hong-kong-sg-lb"
            },
            "tags_all": {
              "Name": "hong-kong-sg-lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0502bf27b4c80f029"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hong-kong-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "hong-kong-sg-server",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:724772059772:security-group/sg-0dc8d39a83da79b26",
            "description": "Allow inbound traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc8d39a83da79b26",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hong-kong-sg-server",
            "name_prefix": "",
            "owner_id": "724772059772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hong-kong-sg-server"
            },
            "tags_all": {
              "Name": "hong-kong-sg-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0502bf27b4c80f029"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hong-kong-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "index_key": "london-sg-lb",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:724772059772:security-group/sg-0c6a89a0ab2fb76c3",
            "description": "Allow inbound traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6a89a0ab2fb76c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "london-sg-lb",
            "name_prefix": "",
            "owner_id": "724772059772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "london-sg-lb"
            },
            "tags_all": {
              "Name": "london-sg-lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-093d18d521048ace7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.london-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "london-sg-server",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:724772059772:security-group/sg-0d0afcaaa37fecb5d",
            "description": "Allow inbound traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0afcaaa37fecb5d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "london-sg-server",
            "name_prefix": "",
            "owner_id": "724772059772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "london-sg-server"
            },
            "tags_all": {
              "Name": "london-sg-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-093d18d521048ace7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.london-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "index_key": "new-york-sg-lb",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772059772:security-group/sg-02d667f614dea0d95",
            "description": "Allow inbound traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d667f614dea0d95",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "new-york-sg-lb",
            "name_prefix": "",
            "owner_id": "724772059772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "new-york-sg-lb"
            },
            "tags_all": {
              "Name": "new-york-sg-lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-059695cf440897711"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new-york-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "new-york-sg-server",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772059772:security-group/sg-065f75ea2a09453d2",
            "description": "Allow inbound traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065f75ea2a09453d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "new-york-sg-server",
            "name_prefix": "",
            "owner_id": "724772059772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "new-york-sg-server"
            },
            "tags_all": {
              "Name": "new-york-sg-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-059695cf440897711"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new-york-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "_6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "index_key": "sao-paulo-sg-lb",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:724772059772:security-group/sg-0c4f530286d2a28e5",
            "description": "Allow inbound traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4f530286d2a28e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sao-paulo-sg-lb",
            "name_prefix": "",
            "owner_id": "724772059772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sao-paulo-sg-lb"
            },
            "tags_all": {
              "Name": "sao-paulo-sg-lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c212e587cef2e6c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sao-paulo-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "sao-paulo-sg-server",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:724772059772:security-group/sg-0e13e3e2497bf968f",
            "description": "Allow inbound traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e13e3e2497bf968f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sao-paulo-sg-server",
            "name_prefix": "",
            "owner_id": "724772059772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sao-paulo-sg-server"
            },
            "tags_all": {
              "Name": "sao-paulo-sg-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c212e587cef2e6c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sao-paulo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "_7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": "tokyo-sg-lb",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:724772059772:security-group/sg-086a17f22065bbcb1",
            "description": "Allow inbound traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086a17f22065bbcb1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tokyo-sg-lb",
            "name_prefix": "",
            "owner_id": "724772059772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyo-sg-lb"
            },
            "tags_all": {
              "Name": "tokyo-sg-lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a56339e88e0859e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "tokyo-sg-server",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:724772059772:security-group/sg-0cb286976a0f45d4d",
            "description": "Allow inbound traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb286976a0f45d4d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tokyo-sg-server",
            "name_prefix": "",
            "owner_id": "724772059772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyo-sg-server"
            },
            "tags_all": {
              "Name": "tokyo-sg-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a56339e88e0859e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "index_key": "australia-a-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:724772059772:subnet/subnet-01f11fc4114919851",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.44.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f11fc4114919851",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "australia-a-public"
            },
            "tags_all": {
              "Name": "australia-a-public"
            },
            "vpc_id": "vpc-001dc221cd494c587"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        },
        {
          "index_key": "australia-b-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:724772059772:subnet/subnet-0a139f75dcc6c9a64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.44.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a139f75dcc6c9a64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "australia-b-public"
            },
            "tags_all": {
              "Name": "australia-b-public"
            },
            "vpc_id": "vpc-001dc221cd494c587"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "index_key": "california-b-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:724772059772:subnet/subnet-04b7290a932e6baab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.46.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b7290a932e6baab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "california-b-public"
            },
            "tags_all": {
              "Name": "california-b-public"
            },
            "vpc_id": "vpc-0a09bf91a7b90d511"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        },
        {
          "index_key": "california-c-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:724772059772:subnet/subnet-01c9c4037dcd044e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.46.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c9c4037dcd044e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "california-c-public"
            },
            "tags_all": {
              "Name": "california-c-public"
            },
            "vpc_id": "vpc-0a09bf91a7b90d511"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "index_key": "hong-kong-a-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:724772059772:subnet/subnet-0f82a4f34a18176b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.45.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f82a4f34a18176b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hong-kong-a-public"
            },
            "tags_all": {
              "Name": "hong-kong-a-public"
            },
            "vpc_id": "vpc-0502bf27b4c80f029"
          },
          "dependencies": [
            "aws_vpc.hong-kong-vpc"
          ]
        },
        {
          "index_key": "hong-kong-b-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:724772059772:subnet/subnet-03cc128dd5884c289",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.45.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cc128dd5884c289",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hong-kong-b-public"
            },
            "tags_all": {
              "Name": "hong-kong-b-public"
            },
            "vpc_id": "vpc-0502bf27b4c80f029"
          },
          "dependencies": [
            "aws_vpc.hong-kong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "index_key": "london-a-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:724772059772:subnet/subnet-0daa1f56ebe590ce7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.42.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0daa1f56ebe590ce7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "london-a-public"
            },
            "tags_all": {
              "Name": "london-a-public"
            },
            "vpc_id": "vpc-093d18d521048ace7"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        },
        {
          "index_key": "london-b-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:724772059772:subnet/subnet-0761fd9f51714bbaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.42.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0761fd9f51714bbaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "london-b-public"
            },
            "tags_all": {
              "Name": "london-b-public"
            },
            "vpc_id": "vpc-093d18d521048ace7"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "index_key": "new-york-a-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772059772:subnet/subnet-0bd351f65927a5a03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.41.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd351f65927a5a03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "new-york-a-public"
            },
            "tags_all": {
              "Name": "new-york-a-public"
            },
            "vpc_id": "vpc-059695cf440897711"
          },
          "dependencies": [
            "aws_vpc.new-york-vpc"
          ]
        },
        {
          "index_key": "new-york-b-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772059772:subnet/subnet-042bed56b2051c2c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.41.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042bed56b2051c2c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "new-york-b-public"
            },
            "tags_all": {
              "Name": "new-york-b-public"
            },
            "vpc_id": "vpc-059695cf440897711"
          },
          "dependencies": [
            "aws_vpc.new-york-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "_6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "index_key": "sao-paulo-a-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:724772059772:subnet/subnet-029146b5d4fdf7d44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.43.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029146b5d4fdf7d44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sao-paulo-a-public"
            },
            "tags_all": {
              "Name": "sao-paulo-a-public"
            },
            "vpc_id": "vpc-0c212e587cef2e6c3"
          },
          "dependencies": [
            "aws_vpc.sao-paulo-vpc"
          ]
        },
        {
          "index_key": "sao-paulo-c-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:724772059772:subnet/subnet-0145fea35f5d12269",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.43.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0145fea35f5d12269",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sao-paulo-c-public"
            },
            "tags_all": {
              "Name": "sao-paulo-c-public"
            },
            "vpc_id": "vpc-0c212e587cef2e6c3"
          },
          "dependencies": [
            "aws_vpc.sao-paulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "_7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": "tokyo-a-private",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:724772059772:subnet/subnet-02e9a585c76100a59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.40.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e9a585c76100a59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-a-private"
            },
            "tags_all": {
              "Name": "tokyo-a-private"
            },
            "vpc_id": "vpc-02a56339e88e0859e"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        },
        {
          "index_key": "tokyo-a-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:724772059772:subnet/subnet-025822a7780837d53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.40.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025822a7780837d53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-a-public"
            },
            "tags_all": {
              "Name": "tokyo-a-public"
            },
            "vpc_id": "vpc-02a56339e88e0859e"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        },
        {
          "index_key": "tokyo-d-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:724772059772:subnet/subnet-096e3a8f2f36821c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.40.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096e3a8f2f36821c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-d-public"
            },
            "tags_all": {
              "Name": "tokyo-d-public"
            },
            "vpc_id": "vpc-02a56339e88e0859e"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        },
        {
          "index_key": "tokyotest-c-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:724772059772:subnet/subnet-00a7713b52cd58ed9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.40.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a7713b52cd58ed9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyotest-c-public"
            },
            "tags_all": {
              "Name": "tokyotest-c-public"
            },
            "vpc_id": "vpc-02a56339e88e0859e"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "australia-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:724772059772:vpc/vpc-001dc221cd494c587",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.44.0.0/16",
            "default_network_acl_id": "acl-06a91a6934dc4cef4",
            "default_route_table_id": "rtb-04e3f440606d89d4f",
            "default_security_group_id": "sg-0f78e03051d3c5ee6",
            "dhcp_options_id": "dopt-001001cf470482103",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-001dc221cd494c587",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04e3f440606d89d4f",
            "owner_id": "724772059772",
            "tags": {
              "Name": "australia"
            },
            "tags_all": {
              "Name": "australia"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "california-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:724772059772:vpc/vpc-0a09bf91a7b90d511",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.46.0.0/16",
            "default_network_acl_id": "acl-0dc6621205f091c0e",
            "default_route_table_id": "rtb-068915c8adb2a762b",
            "default_security_group_id": "sg-05b33c751b47b17cf",
            "dhcp_options_id": "dopt-0f68a465683cf1104",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a09bf91a7b90d511",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-068915c8adb2a762b",
            "owner_id": "724772059772",
            "tags": {
              "Name": "california"
            },
            "tags_all": {
              "Name": "california"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hong-kong-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:724772059772:vpc/vpc-0502bf27b4c80f029",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.45.0.0/16",
            "default_network_acl_id": "acl-0645d315558f92bab",
            "default_route_table_id": "rtb-0d603014af6f77f4c",
            "default_security_group_id": "sg-0dd09733aca0a8f5d",
            "dhcp_options_id": "dopt-0beba316a2655080c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0502bf27b4c80f029",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d603014af6f77f4c",
            "owner_id": "724772059772",
            "tags": {
              "Name": "hong-kong"
            },
            "tags_all": {
              "Name": "hong-kong"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "london-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:724772059772:vpc/vpc-093d18d521048ace7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.42.0.0/16",
            "default_network_acl_id": "acl-022812e3c533dc89e",
            "default_route_table_id": "rtb-05c70604119303b1a",
            "default_security_group_id": "sg-008deab084812e544",
            "dhcp_options_id": "dopt-09713dd77c1dce11c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-093d18d521048ace7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c70604119303b1a",
            "owner_id": "724772059772",
            "tags": {
              "Name": "london"
            },
            "tags_all": {
              "Name": "london"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-york-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772059772:vpc/vpc-059695cf440897711",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.41.0.0/16",
            "default_network_acl_id": "acl-0b157ff45e399c1fb",
            "default_route_table_id": "rtb-05438d2ed27bc21a9",
            "default_security_group_id": "sg-0ecbe9672647dab51",
            "dhcp_options_id": "dopt-02f654733ad0dba92",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-059695cf440897711",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05438d2ed27bc21a9",
            "owner_id": "724772059772",
            "tags": {
              "Name": "new-york"
            },
            "tags_all": {
              "Name": "new-york"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sao-paulo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:724772059772:vpc/vpc-0c212e587cef2e6c3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.43.0.0/16",
            "default_network_acl_id": "acl-0f23a579e76d9f198",
            "default_route_table_id": "rtb-0a7efb759fd040fa3",
            "default_security_group_id": "sg-042d19bc3b0d44246",
            "dhcp_options_id": "dopt-074344379473ac1a3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c212e587cef2e6c3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a7efb759fd040fa3",
            "owner_id": "724772059772",
            "tags": {
              "Name": "sao-paulo"
            },
            "tags_all": {
              "Name": "sao-paulo"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tokyo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:724772059772:vpc/vpc-02a56339e88e0859e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.40.0.0/16",
            "default_network_acl_id": "acl-07ae0815a9a1f28ad",
            "default_route_table_id": "rtb-06ef62e17baece93e",
            "default_security_group_id": "sg-0047fa118c6573e46",
            "dhcp_options_id": "dopt-0736f1eb0a1b98a80",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02a56339e88e0859e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06ef62e17baece93e",
            "owner_id": "724772059772",
            "tags": {
              "Name": "tokyo"
            },
            "tags_all": {
              "Name": "tokyo"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}